@@ -1,4 +1,4 @@
-				mod_geoip2 1.2.0
+				mod_geoip2 1.2.1
 				----------------
 
 ======== OVERVIEW =========
