@@ -1,3 +1,4 @@
+	- Fix race condition for IO based caches like Standard. MMapCache and MemoryCache are not affected. ( Boris Zentner, Nick Lott, Jeff )
 	- Slight performance increase - don't make per_dir ap_get_module_config call where we return DECLINED because cfg->GeoIPEnabled is true (Guenter Knauf)
 	- NetWare/Win32 compilation fixes, since can't declare vars in middle of code (Guenter Knauf)
 
